--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "autoprefixer": "10.4.14",
     "next": "^13.5.4",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
